Eliminación de warnings